--- a/serverless/emokognition-results-view-html/index.html
+++ b/serverless/emokognition-results-view-html/index.html
@@ -1,35 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Audience mood results</title>
-</head>
-<body>
-<table>
-    <caption>Satisfaction statistics(main)</caption>
-    <TR>
-        <TH>Emotion</TH>
-        <TH>Stat</TH>
-    </TR>
-    {% for item in items %}
-    <TR>
-        <TD>{{item.emotion}}</TD>
-        <TD>{{item.stat}}</TD>
-    </TR>
-    {% endfor %}
-</table>
-<table>
-    <caption>Satisfaction statistics(alternative)</caption>
-    <TR>
-        <TH>Emotion</TH>
-        <TH>Stat</TH>
-    </TR>
-    {% for item in alt_items %}
-    <TR>
-        <TD>{{alt_item.emotion}}</TD>
-        <TD>{{alt_item.stat}}</TD>
-    </TR>
-    {% endfor %}
-</table>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>{{option_a}} vs {{option_b}} -- Result</title>
+    <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
+    <meta name="keywords" content="docker, stack">
+    <meta name="author" content="Docker">
+    <style type="text/css">
+    @import url(//fonts.googleapis.com/css?family=Open+Sans:400,700,600);
+
+    *{
+      box-sizing:border-box;
+    }
+    html,body{
+      margin: 0;
+      padding: 0;
+      background-color: #F7F8F9;
+      height: 100vh;
+      font-family: 'Open Sans';
+    }
+
+    button{
+      border-radius: 0;
+      width: 100%;
+      height: 50%;
+    }
+
+    button[type="submit"] {
+      -webkit-appearance:none; -webkit-border-radius:0;
+    }
+
+    button i{
+      float: right;
+      padding-right: 30px;
+      margin-top: 3px;
+    }
+
+    button.a{
+      background-color: #1aaaf8;
+    }
+
+    button.b{
+      background-color: #00cbca;
+    }
+
+    #tip{
+      text-align: left;
+      color: #c0c9ce;
+      font-size: 14px;
+    }
+
+    #hostname{
+      position: absolute;
+      bottom: 100px;
+      right: 0;
+      left: 0;
+      color: #8f9ea8;
+      font-size: 24px;
+    }
+
+    #content-container{
+      z-index: 2;
+      position: relative;
+      margin: 0 auto;
+      display: table;
+      padding: 10px;
+      max-width: 940px;
+      height: 100%;
+    }
+    #content-container-center{
+      display: table-cell;
+      text-align: center;
+    }
+
+    #content-container-center h3{
+      color: #254356;
+    }
+
+    #choice{
+      transition: all 300ms linear;
+      line-height: 1.3em;
+      display: inline;
+      vertical-align: middle;
+      font-size: 3em;
+    }
+    #choice a{
+      text-decoration:none;
+    }
+    #choice a:hover, #choice a:focus{
+      outline:0;
+      text-decoration:underline;
+    }
+
+    #choice button{
+      display: block;
+      height: 80px;
+      width: 330px;
+      border: none;
+      color: white;
+      text-transform: uppercase;
+      font-size:18px;
+      font-weight: 700;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      text-align: left;
+      padding-left: 50px;
+    }
+
+    #choice button.a:hover{
+      background-color: #1488c6;
+    }
+
+    #choice button.b:hover{
+      background-color: #00a2a1;
+    }
+
+    #choice button.a:focus{
+      background-color: #1488c6;
+    }
+
+    #choice button.b:focus{
+      background-color: #00a2a1;
+    }
+
+    #background-stats{
+      z-index:1;
+      height:100%;
+      width:100%;
+      position:absolute;
+    }
+    #background-stats div{
+      transition: width 400ms ease-in-out;
+      display:inline-block;
+      margin-bottom:-4px;
+      width:50%;
+      height:100%;
+    }
+</style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <div id="content-container">
+      <div id="content-container-center">
+        <h2>Audience mood</h2>
+        <table cellspacing="2" border="1" cellpadding="5" width="600">
+            <caption><h3>Main satisfaction statistics</h3></caption>
+            <TR>
+                <TH>Emotion</TH>
+                <TH>Probability</TH>
+            </TR>
+            {% for item in main_emotions %}
+            <TR>
+                <TD>{{item.emotion}}</TD>
+                <TD>{{item.stat}}</TD>
+            </TR>
+            {% endfor %}
+        </table>
+        <table cellspacing="2" border="1" cellpadding="5" width="600">
+            <caption><h3>Main satisfaction statistics</h3></caption>
+            <TR>
+                <TH>Emotion</TH>
+                <TH>Probability</TH>
+            </TR>
+            {% for item in alt_emotions %}
+            <TR>
+                <TD>{{item.emotion}}</TD>
+                <TD>{{item.stat}}</TD>
+            </TR>
+            {% endfor %}
+        </table>
+      </div>
+    </div>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+  </body>
 </html>
