--- a/serverless/emotion-recognition/emokognition-results-view-html/index.html
+++ b/serverless/emotion-recognition/emokognition-results-view-html/index.html
@@ -160,7 +160,7 @@
             {% endfor %}
         </table>
         <table cellspacing="2" border="1" cellpadding="5" width="600">
-            <caption><h3>Main satisfaction statistics</h3></caption>
+            <caption><h3>Alternative satisfaction statistics</h3></caption>
             <TR>
                 <TH>Emotion</TH>
                 <TH>Probability</TH>
